styles.css
body {
    margin: 0;
    overflow: hidden;
    background-color: #f5f5f5;
}

#container {
    position: relative;
    width: 100vw;
    height: 100vh;
}

img {
    mix-blend-mode: multiply;
}

.sweet {
    position: absolute;
    top: -100px;
    /* Start above the visible area */
    width: 50px;
    /* Adjust size as needed */
}

.score {
    margin-top: 20px;
    position: absolute;
    left: 50%;
    transform: translate(-50%);
    display: inline-block;
    padding: 20px 30px;
    background-color: burlywood;
    color: white;
    border-radius: 20px;
    font-size: 20px;
}

.failed {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 400px;
    height: 200px;
    background-color: burlywood;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    border-radius: 50px;
    -webkit-transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -o-transform: translate(-50%, -50%);
}

.failed span {
    padding: 19px;
    color: white;
    font-size: 25px;
}

.failed button {
    padding: 12px;
    border-radius: 15px;
    border: none;
    font-size: 16px;
    cursor: pointer;
}


@keyframes fall {
    to {
        transform: translateY(100vh);
    }
}

.sweet {
    animation: fall linear 1;
}

